Fix JdkObsolete in main code; relax the check in tests
The newer Error Prone shipped with rules_java 9.8.0 reports
JdkObsolete for String-charset-name JDK APIs. Fix the main-code sites
by switching to the Charset overloads (GitHook, TransportHttp, FS,
FS_POSIX, HttpSupport, LfsPointer, SignerV4).

Test code has ~90 further such sites (default-charset PrintWriter,
getBytes, toString, etc.). To keep this toolchain bump low-noise,
relax JdkObsolete to non-fatal in tests via exclude_in_tests and
leave that per-test charset cleanup to jgit maintainers as a
follow-up. Main/src code keeps the check at ERROR.

Release-Notes: skip
Change-Id: I13d6a6df6be958afeef0dbecd15fe2431a528a13